# clevr-dataset-gen

./: .gitignore  README.md  TO_DO.md  environment.yml  pyproject.toml
image_generation/: render_images.py
